<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.etuloser.padma.rohit.homework08.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="11"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:id="@+id/ll1"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lli"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="visible"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="Current city not yet set"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Set Current City"
                android:layout_marginTop="10dp"
                android:id="@+id/btnsetcc"
                android:layout_gravity="center"
                android:onClick="OnclickSetCurrentCity"
                />
            <ProgressBar
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:id="@+id/pg1"
                android:layout_gravity="center"
                android:visibility="invisible"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/llf"
            android:orientation="vertical"
            android:weightSum="10"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:id="@+id/txtcitycountry"
                android:text="Charlotte,US"
                android:textColor="@color/colorPrimary"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:id="@+id/txtclimatetype"
                android:text="Mostly Sunny"
                android:textColor="@color/colorPrimary"
                />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="95dp"
                android:id="@+id/img_climate"
                android:layout_weight="4"
                android:src="@mipmap/ic_launcher"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:text="Temperature"
                android:gravity="center"
                android:id="@+id/txttemperature"
                android:textColor="@color/colorPrimary"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:id="@+id/txtlastupdated"
                android:text="Updated 16min ago"
                android:textColor="@color/colorPrimary"
                />

        </LinearLayout>

    </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.4"
        android:id="@+id/ll2"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >


        <EditText
            android:id="@+id/edxcity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="City Name (i.e. Charlotte)"
            />

        <EditText
            android:id="@+id/edxcountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Country Name (i.e. US)"

            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".8"
            android:text="Search City"
            android:id="@+id/btnsearchcity"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="SearchClick"

            />

    </LinearLayout>
        </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.6"
        android:id="@+id/ll3"
        android:orientation="vertical"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ll3i"
    android:visibility="visible"
    android:layout_margin="10dp"
    >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg1"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg2"
            android:gravity="center"
            android:textColor="@color/colorPrimary"

            />
</LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/ll3f"
            android:visibility="visible"
            android:weightSum="10"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/savedcity"
                android:gravity="center"
                android:textColor="@color/colorPrimary"

                />
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:id="@+id/rvlist"
                android:layout_gravity="center"
                ></android.support.v7.widget.RecyclerView>


        </LinearLayout>

    </LinearLayout>



</LinearLayout>



</LinearLayout>
